# SnakeReinforcementLearning

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: SnakeAI.cpp  SnakeAI.hpp  Utils.h
